Fix for automatically added padding on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
     --text-hover : #CDCAC2;
   }
   
-  
+  *{
+    padding: 0;
+    margin: 0;
+  }
   
   /* WHOLE HTML */
   body {
